# stellAIverse-contracts

./: .gitignore  Cargo-test.toml  Cargo.toml  DYNAMIC_FEES_AND_NFT_INTEGRATION.md  PR_DESCRIPTION.md  PR_DESCRIPTION_NEW.md
.github/workflows/: ci.yml
archive/contracts/access-control/: Cargo.toml
archive/contracts/access-control/src/: lib.rs
archive/contracts/bug-bounty/: Cargo.toml
archive/contracts/bug-bounty/src/: lib.rs
archive/contracts/core/: GovernanceManager.sol  KYCManager.sol  RoleManager.sol  SecurityEvents.sol
archive/contracts/credit-score-nft/: Cargo.toml
archive/contracts/credit-score-nft/src/: lib.rs  test.rs
archive/contracts/error-codes/: Cargo.toml
archive/contracts/error-codes/src/: lib.rs
archive/contracts/oracle/: Cargo.toml
archive/contracts/oracle/src/: lib.rs  tests.rs  testutils.rs
archive/contracts/risk-evaluation/src/: lib.rs
archive/contracts/security-events/: Cargo.toml
archive/contracts/security-events/src/: lib.rs
archive/contracts/storage-keys/: Cargo.toml
archive/contracts/storage-keys/src/: lib.rs
archive/contracts/transaction-coordinator/: Cargo.toml  README.md
archive/contracts/transaction-coordinator/src/: integration_test.rs  lib.rs  test.rs  workflows.rs
contracts/agent-nft/src/: lib.rs
contracts/compliance-integration/: Cargo.toml
contracts/compliance-integration/src/: lib.rs
contracts/evolution/src/: lib.rs
contracts/execution-hub/: Cargo.toml
contracts/execution-hub/src/: lib.rs
contracts/governance/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/lifecycle-manager/src/: test.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/proptest-regressions/: prop_tests.txt
contracts/marketplace/src/: atomic.rs  lib.rs  payments.rs  prop_tests.rs  storage.rs  test_advanced_lease.rs  test_amm_integration.rs  test_bid_history.rs  test_dynamic_fee_enhancement.rs  test_lease.rs
contracts/oracle/src/: lib.rs  types.rs
contracts/prediction-market/: Cargo.toml
contracts/referral-rewards/: Cargo.toml
contracts/referral-rewards/src/: lib.rs
contracts/staking-bonuses/: Cargo.toml
contracts/staking-bonuses/src/: lib.rs
contracts/threshold-agent/: Cargo.toml
contracts/transaction-coordinator/src/test/: atomic_transaction_test.rs
contracts/waitlist-tokens/: Cargo.toml
contracts/waitlist-tokens/src/: lib.rs
contracts_backup/marketplace/src/: lib.rs
docs/: kyc_state_machine.md
lib/src/: atomic.rs  audit.rs  errors.rs  lib.rs  rbac.rs  storage_keys.rs  tokenlp.rs  types.rs  types.rs.tmp
scripts/: security-audit.ps1  security-audit.sh
shared/src/: lib.rs
tests/: security_integration_tests.rs
