[workspace]
members = [
    "contracts/affiliate-bonuses",
    "contracts/credit-scoring-waitlist",
    "contracts/agent-nft",
    "contracts/agent-token",
    "contracts/bridge-manager",
    "contracts/compliance-integration",
    "contracts/evolution",
    "contracts/execution-hub",
    "contracts/faucet",
    "contracts/governance",
    "contracts/identity-did",
    "contracts/lifecycle-manager",
    "contracts/marketplace",
    "contracts/metrics-aggregator",
    "contracts/prediction-market",
    "contracts/referral-rewards",
    "contracts/staking-bonuses",
    "contracts/multisig-waitlist",
    "contracts/threshold-agent",
    "contracts/verifiable-credentials",
    "contracts/waitlist-tokens",
    "lib",
    "shared",
]

resolver = "2"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
panic = "abort"
debug = false
strip = "symbols"
overflow-checks = true

[profile.release-with-logs]
inherits = "release"
debug = true
strip = "none"

[profile.dev]
codegen-units = 16
opt-level = 0
lto = false
debug = true
incremental = true

[profile.test]
codegen-units = 16
opt-level = 1
lto = false
debug = true
incremental = true



[workspace.dependencies]
soroban-sdk = { version = "22.0.10", default-features = false }