[workspace]
members = [
    "contracts/compliance-integration",
    "contracts/execution-hub",
    "contracts/marketplace",
    "lib",
    "shared",
]

resolver = "2"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
panic = "abort"
debug = false
strip = "symbols"
overflow-checks = true

[profile.release-with-logs]
inherits = "release"
debug = true
strip = "none"

[profile.dev]
codegen-units = 16
opt-level = 0
lto = false
debug = true
incremental = true

[profile.test]
codegen-units = 16
opt-level = 1
lto = false
debug = true
incremental = true



[workspace.dependencies]
soroban-sdk = { version = "22.0.10", default-features = false }